fix bugs on export: export window popup when resize; icon missing.

--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -515,7 +515,6 @@
                     </div>
 				    <div class='ex-window-msg'>
                         <p>
-                            {{Msg}}
                         </p>
 				    </div>
                     <div>
@@ -711,7 +710,7 @@
 			g('mask').style.display = 'none';
 		}
 
-		window.onresize = showEXWindow;
+		// window.onresize = showEXWindow;
 		
 		Window('winDrag','winMove');
 		
