--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -571,7 +571,7 @@
                         </p>
 				    </div>
                     <div>
-                        <input class='ex-window-submit'  type='submit' value='Creat & Export Playlist' >
+                        <input class='ex-window-submit'  type='submit' value='Create & Export Playlist' >
                     </div>
                 </div>
             </form>
